feat: add /vendors/me
